<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="advanced"
        app:title="@string/pref_label_main"
        app:initialExpandedChildrenCount="3">

        <Preference
            app:key="open_currency_list"
            app:title="@string/bottom_nav_item_currencies"
            app:summary="Open currency list"/>

        <Preference
            app:key="open_project_list"
            app:title="@string/bottom_nav_item_projects"
            app:summary="Open project list"/>

        <Preference
            app:key="load_from_assets"
            app:title="Load backup from assets"
            app:summary="Load backup from assets" />

        <Preference
            app:key="expandable_example"
            app:title="Hello I am Simple text"
            app:summary="I am the preference that will be showed when the preference is not expanded"/>

        <SwitchPreferenceCompat
            app:key="parent"
            app:title="test switch"
            app:summary="Toggle me!"/>

    </PreferenceCategory>

</PreferenceScreen>