<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.transaction.TransactionFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transaction_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/default_transaction_date" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_date">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_account_from_v2"
            android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            tools:text="Cache" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/image_margin"
            android:src="@drawable/ic_baseline_arrow_forward_24"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_account_to_v2"
            android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            tools:text="Cache" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_buttons_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_buttons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_category_v2"
            android:drawableStart="@drawable/ic_action_navbar_item_categories"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            tools:text="Food" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_project_v2"
            android:drawableStart="@drawable/ic_action_navbar_item_projects"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            tools:text="No project" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_currency_v2"
            android:drawableStart="@drawable/ic_action_navbar_item_currency"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            tools:text="Food" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_from_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_buttons_row2"
        android:hint="@string/transaction_account_label">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="wrap_content"
            android:elevation="2dp"
            android:ellipsize="middle"

            android:inputType="none"
            android:layerType="none"
            android:textAlignment="viewStart"
            android:textColorHint="#616161"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/arrow_down_image_view"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_from_spinner" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_to_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_from_spinner"
        android:hint="@string/transaction_account_label">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Choose account to"
            android:inputType="none"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_to_spinner"
        android:hint="@string/currency_title_label">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Choose currency"
            android:inputType="none"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/image_button_transaction_type"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_income_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_spinner" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/transaction_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:ellipsize="middle"
        android:hint=""
        android:inputType="number|numberDecimal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_transaction_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_button_transaction_type"
        app:layout_constraintTop_toTopOf="@+id/image_button_transaction_type" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_amount"
        android:hint="@string/category_title_label">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose category"
            android:inputType="none"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/project_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner"
        android:hint="@string/category_title_label">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose project"
            android:inputType="none"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_ok_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button" />

</androidx.constraintlayout.widget.ConstraintLayout>